VS ApexCode/UlbergProject0/force-app/main/default/objects/Contact/fields/Times_Available__c.field-meta.xml
<CustomField>
    <fullName>Times_Available__c</fullName>
    <label>Times Available</label>
    <length>30</length>
    <type>Text</type>
</CustomField>