VS ApexCode/UlbergProject0/force-app/main/default/objects/Contact/fields/Total_Rating_For_all_items__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating_For_all_items__c</fullName>
    <formula>TotalReview__c  /  Overall_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rating For all items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>