VS ApexCode/UlbergProject0/force-app/main/default/objects/Contact/fields/TotalReview__c.field-meta.xml
<CustomField>
    <fullName>TotalReview__c</fullName>
    <label>TotalReview</label>
    <summarizedField>Rating__c.Rating_of_item__c</summarizedField>
    <summaryForeignKey>Rating__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>